--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="nom_de_la_partie">Nom de la partie</string>
+    <string name="nom_du_joueur">Nom du joueur</string>
+    <string name="nom_du_ma_tre_de_jeu">Nom du maître de jeu</string>
+    <string name="cr_er_une_nouvelle_partie">Créer une nouvelle partie</string>
 </resources>
